--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -33,7 +33,7 @@ tasks:
   test:
     desc: Run tests
     cmds:
-      - go test -v ./...
+      - go test -v ./... -count=1
 
   fct:
     desc: Run format, check, and test in sequence
