feat: extract and expose primary_languages from code_stats at root and aggregated levels. Add keycloak as tech

--- a/taxonomies/tech-taxonomy.yaml
+++ b/taxonomies/tech-taxonomy.yaml
@@ -2853,6 +2853,12 @@ categories:
           description: ""
           isprimarytech: null
           properties: {}
+        - name: Keycloak
+          tech: keycloak
+          category: identity
+          description: ""
+          isprimarytech: null
+          properties: {}
         - name: Kinde
           tech: kinde
           category: identity
