--- a/.stack-analyzer.yml
+++ b/.stack-analyzer.yml
@@ -5,3 +5,6 @@ exclude:
   # Exclude all rule YAML files to avoid detecting them as project technologies
   - "internal/rules/techs/**/*.yaml"
   - "internal/rules/techs/**/*.yml"
+  # Exclude generated taxonomy files
+  - "taxonomies/**/*.yaml"
+  - "taxonomies/**/*.yml"
