fix: Angular rule should only match @angular/* packages, not bare 'angular'

--- a/internal/rules/techs/web_framework/angular.yaml
+++ b/internal/rules/techs/web_framework/angular.yaml
@@ -2,7 +2,7 @@ tech: angular
 name: Angular
 dependencies:
   - type: npm
-    name: angular
-    example: angular
+    name: /^@angular\//
+    example: "@angular/core"
 files:
   - angular.json
