ci: Split archives into separate tar.gz and zip configurations for cross-platform support

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -30,11 +30,17 @@ builds:
 
 archives:
   - id: default
-    format: tar.gz
+    formats:
+      - tar.gz
     name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
-    format_overrides:
-      - goos: windows
-        format: zip
+  - id: windows
+    formats:
+      - zip
+    name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+    builds:
+      - stack-analyzer
+    goos:
+      - windows
 
 checksum:
   name_template: "checksums.txt"
